--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Bloquear Gente Chata</string>
+    <string name="app_name">Bloquear Número Chato</string>
     <string name="add_number">Adicionar número</string>
     <string name="phone">Telefone:</string>
     <string name="clear">Limpar</string>
