--- a/app/src/main/res/values-en-rUM/strings.xml
+++ b/app/src/main/res/values-en-rUM/strings.xml
@@ -14,4 +14,5 @@
     <string name="delete">Delete</string>
     <string name="confirm_delete_record">Are you want to delete this record?</string>
     <string name="no_record_found">No record!</string>
+    <string name="blacklist">Black list</string>
 </resources>
